--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sneakers</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
-</head>
-<body>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
+    <title>Sneakers</title>
+  </head>
+  <body>
+    <nav class="nav">
+      <div class="nav__top">
+        <div class="nav__brand">
+          <img src="img/sneakers.png" alt="" />
+        </div>
+        <div class="nav__search">
+          <input type="text" placeholder="Search" />
+          <img src="./img/search.png" width="20" height="20" alt="" />
+        </div>
+        <div class="nav_offer">
+          <a href="#">Limited Offer!</a>
+        </div>
+      </div>
+      <div class="nav__bottom">
+        <li class="nav__menu-item">Nike</li>
+        <li class="nav__menu-item">Air force</li>
+        <li class="nav__menu-item">Jordan</li>
+        <li class="nav__menu-item">Blazer</li>
+        <li class="nav__menu-item">Crater</li>
+      </div>
+    </nav>
+  </body>
 </html>
