--- a/index.html
+++ b/index.html
@@ -27,12 +27,64 @@
         </div>
       </div>
       <div class="nav__bottom">
-        <li class="nav__menu-item">Nike</li>
         <li class="nav__menu-item">Air force</li>
         <li class="nav__menu-item">Jordan</li>
         <li class="nav__menu-item">Blazer</li>
         <li class="nav__menu-item">Crater</li>
+        <li class="nav__menu-item">Hippie</li>
       </div>
     </nav>
+
+    <div class="slider">
+      <div class="slider__wrapper">
+        <div class="slider__item">
+          <img src="./img/air.png" alt="" class="slider__item-img" />
+          <h2 class="slider__item-price">$119</h2>
+          <h1 class="slider__item-name">
+            <span>Air force</span> <br /><span>new</span><br /><span
+              >season</span
+            >
+          </h1>
+          <button class="slider__item-cta">Buy Now!</button>
+          <div class="slider__item-bg"></div>
+        </div>
+        <div class="slider__item">
+          <img src="./img/jordan.png" alt="" class="slider__item-img" />
+          <h2 class="slider__item-price">$149</h2>
+          <h1 class="slider__item-name">
+            <span>jordan</span><br /><span>new</span><br /><span>season</span>
+          </h1>
+          <button class="slider__item-cta">Buy Now!</button>
+          <div class="slider__item-bg"></div>
+        </div>
+        <div class="slider__item">
+          <img src="./img/blazer.png" alt="" class="slider__item-img" />
+          <h2 class="slider__item-price">$119</h2>
+          <h1 class="slider__item-name">
+            <span>blazer</span> <br /><span>new</span> <br /><span>season</span>
+          </h1>
+          <button class="slider__item-cta">Buy Now!</button>
+          <div class="slider__item-bg"></div>
+        </div>
+        <div class="slider__item">
+          <img src="./img/crater.png" alt="" class="slider__item-img" />
+          <h2 class="slider__item-price">$119</h2>
+          <h1 class="slider__item-name">
+            <span>crater</span> <br /><span>new</span> <br /><span>season</span>
+          </h1>
+          <button class="slider__item-cta">Buy Now!</button>
+          <div class="slider__item-bg"></div>
+        </div>
+        <div class="slider__item">
+          <img src="./img/hippie.png" alt="" class="slider__item-img" />
+          <h2 class="slider__item-price">$119</h2>
+          <h1 class="slider__item-name">
+            <span>Hippie</span> <br /><span>new</span> <br /><span>season</span>
+          </h1>
+          <button class="slider__item-cta">Buy Now!</button>
+          <div class="slider__item-bg"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
