:lipstick: Add features section

--- a/index.html
+++ b/index.html
@@ -86,5 +86,28 @@
         </div>
       </div>
     </div>
+
+    <section class="features">
+      <div class="features__item">
+        <img src="img/shipping.png" alt="" />
+        <h3>FREE SHIPPING</h3>
+        <p>Free worldwide shipping on all orders.</p>
+      </div>
+      <div class="features__item">
+        <img src="img/return.png" alt="" />
+        <h3>30 DAYS RETURN</h3>
+        <p>No question return and easy refund in 14 days.</p>
+      </div>
+      <div class="features__item">
+        <img src="img/gift.png" alt="" />
+        <h3>GIFT CARDS</h3>
+        <p>Buy gift cards and use coupon codes easily.</p>
+      </div>
+      <div class="features__item">
+        <img src="img/contact.png" alt="" />
+        <h3>CONTACT US!</h3>
+        <p>Keep in touch via email and support system.</p>
+      </div>
+    </section>
   </body>
 </html>
