:lipstick: Add product section

--- a/index.html
+++ b/index.html
@@ -109,5 +109,27 @@
         <p>Keep in touch via email and support system.</p>
       </div>
     </section>
+
+    <section class="product">
+      <img src="img/air.png" alt="" class='product__img' />
+      <div class="product__details">
+        <h2 class="product__name">AIR FORCE</h2>
+        <h3 class="product__price">$199</h3>
+        <p class="product__description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam enim
+          velit incidunt nam laborum id ipsa iste suscipit.
+        </p>
+        <div class="product__variants">
+          <div class="color"></div>
+          <div class="color"></div>
+        </div>
+        <div class="product__size">
+          <div class="size">42</div>
+          <div class="size">43</div>
+          <div class="size">44</div>
+        </div>
+        <button class="product__buy-btn">BUY NOW!</button>
+      </div>
+    </section>
   </body>
 </html>
