:sparkles: Make product section dynamic
Products object added. The product section DOM is manipulated based on selected menu item.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
               >season</span
             >
           </h1>
-          <button class="slider__item-cta">Buy Now!</button>
+          <a href="#product"
+            ><button class="slider__item-cta">Buy Now!</button></a
+          >
           <div class="slider__item-bg"></div>
         </div>
         <div class="slider__item">
@@ -54,7 +56,9 @@
           <h1 class="slider__item-name">
             <span>jordan</span><br /><span>new</span><br /><span>season</span>
           </h1>
-          <button class="slider__item-cta">Buy Now!</button>
+          <a href="#product"
+            ><button class="slider__item-cta">Buy Now!</button></a
+          >
           <div class="slider__item-bg"></div>
         </div>
         <div class="slider__item">
@@ -63,7 +67,9 @@
           <h1 class="slider__item-name">
             <span>blazer</span> <br /><span>new</span> <br /><span>season</span>
           </h1>
-          <button class="slider__item-cta">Buy Now!</button>
+          <a href="#product"
+            ><button class="slider__item-cta">Buy Now!</button></a
+          >
           <div class="slider__item-bg"></div>
         </div>
         <div class="slider__item">
@@ -72,7 +78,9 @@
           <h1 class="slider__item-name">
             <span>crater</span> <br /><span>new</span> <br /><span>season</span>
           </h1>
-          <button class="slider__item-cta">Buy Now!</button>
+          <a href="#product"
+            ><button class="slider__item-cta">Buy Now!</button></a
+          >
           <div class="slider__item-bg"></div>
         </div>
         <div class="slider__item">
@@ -81,7 +89,9 @@
           <h1 class="slider__item-name">
             <span>Hippie</span> <br /><span>new</span> <br /><span>season</span>
           </h1>
-          <button class="slider__item-cta">Buy Now!</button>
+          <a href="#product"
+            ><button class="slider__item-cta">Buy Now!</button></a
+          >
           <div class="slider__item-bg"></div>
         </div>
       </div>
@@ -110,23 +120,16 @@
       </div>
     </section>
 
-    <section class="product">
-      <img src="img/air.png" alt="" class='product__img' />
+    <section class="product" id="product">
+      <img src="img/air.png" alt="" class="product__img" />
       <div class="product__details">
-        <h2 class="product__name">AIR FORCE</h2>
-        <h3 class="product__price">$199</h3>
-        <p class="product__description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam enim
-          velit incidunt nam laborum id ipsa iste suscipit.
-        </p>
-        <div class="product__variants">
-          <div class="color"></div>
-          <div class="color"></div>
-        </div>
-        <div class="product__size">
+        <h2 class="product__name"></h2>
+        <h3 class="product__price"></h3>
+        <p class="product__description"></p>
+        <div class="product__variants"></div>
+        <div class="product__sizes">
           <div class="size">42</div>
-          <div class="size">43</div>
-          <div class="size">44</div>
+          <div class="size">42</div>
         </div>
         <button class="product__buy-btn">BUY NOW!</button>
       </div>
