:sparkles: Make color variant buttons functional
Product image change according to selected coloe variants.

--- a/index.html
+++ b/index.html
@@ -127,10 +127,7 @@
         <h3 class="product__price"></h3>
         <p class="product__description"></p>
         <div class="product__variants"></div>
-        <div class="product__sizes">
-          <div class="size">42</div>
-          <div class="size">42</div>
-        </div>
+        <div class="product__sizes"></div>
         <button class="product__buy-btn">BUY NOW!</button>
       </div>
     </section>
