--- a/index.html
+++ b/index.html
@@ -131,5 +131,32 @@
         <button class="product__buy-btn">BUY NOW!</button>
       </div>
     </section>
+
+    <section class="gallary">
+      <div class="gallary__item">
+        <h1 class="gallary__title">Be Yourself!</h1>
+        <img
+          src="https://images.pexels.com/photos/9295809/pexels-photo-9295809.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+          alt=""
+          class="gallary__img"
+        />
+      </div>
+      <div class="gallary__item">
+        <img
+          src="https://images.pexels.com/photos/1040427/pexels-photo-1040427.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+          alt=""
+          class="gallary__img"
+        />
+        <h1 class="gallary__title">This is the First Day of Your New Life</h1>
+      </div>
+      <div class="gallary__item">
+        <h1 class="gallary__title">Just Do it!</h1>
+        <img
+          src="https://images.pexels.com/photos/7856965/pexels-photo-7856965.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+          alt=""
+          class="gallary__img"
+        />
+      </div>
+    </section>
   </body>
 </html>
