:lipstick: Add Choose your style section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="script.js" defer></script>
     <title>Sneakers</title>
   </head>
-  <body>
+  <body id="start">
     <nav class="nav">
       <div class="nav__top">
         <div class="nav__brand">
@@ -155,6 +155,29 @@
           src="https://images.pexels.com/photos/7856965/pexels-photo-7856965.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
           alt=""
           class="gallary__img"
+        />
+      </div>
+    </section>
+
+    <section class="style">
+      <div class="style__item">
+        <img
+          src="https://images.pexels.com/photos/4753986/pexels-photo-4753986.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+          alt=""
+        />
+      </div>
+
+      <div class="style__item">
+        <h2 class="style__title sm">WINTER NEW ARRIVALS</h2>
+        <h1 class="style__title">New Season</h1>
+        <h1 class="style__title">New Collection</h1>
+        <a href="#start"><button>CHOOSE YOUR STYLE</button></a>
+      </div>
+
+      <div class="style__item">
+        <img
+          src="https://images.pexels.com/photos/7856965/pexels-photo-7856965.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+          alt=""
         />
       </div>
     </section>
