:lipstick: Add footer

--- a/index.html
+++ b/index.html
@@ -181,5 +181,59 @@
         />
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="footer__aboutus">
+        <h3>About us</h3>
+        <ul class="footer__list">
+          <li>Company</li>
+          <li>Contact</li>
+          <li>Careers</li>
+          <li>Affiliate</li>
+          <li>Stores</li>
+        </ul>
+      </div>
+      <div class="footer__links">
+        <h3>Useful Links</h3>
+        <ul class="footer__list">
+          <li>Support</li>
+          <li>Refund</li>
+          <li>FAQ</li>
+          <li>Feedback</li>
+          <li>Stories</li>
+        </ul>
+      </div>
+      <div class="footer__products">
+        <h3>Products</h3>
+        <ul class="footer__list">
+          <li>Air Force</li>
+          <li>Air Jordan</li>
+          <li>Blazer</li>
+          <li>Crater</li>
+          <li>Hippie</li>
+        </ul>
+      </div>
+      <div class="footer__last">
+        <div class="footer__newsletter">
+          <h3>Subscribe to our newsletter</h3>
+          <div class="footer__subscribe-email">
+            <input type="text" placeholder="your@email.com" />
+            <button>Join</button>
+          </div>
+        </div>
+        <div class="footer__followus">
+          <h3>Follow us</h3>
+          <div class="footer__social-logos">
+            <img src="img/facebook.png" alt="" />
+            <img src="img/twitter.png" alt="" />
+            <img src="img/instagram.png" alt="" />
+            <img src="img/whatsapp.png" alt="" />
+          </div>
+        </div>
+        <div class="footer__copyright">
+          <p>&copy; All rights reserved. 2022</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
